Adjsuted img mappings to correct locn. Added z-index to modal pop

--- a/src/app/styles/modal.scss
+++ b/src/app/styles/modal.scss
@@ -11,6 +11,7 @@
   border-radius: 10px;
   padding-left: 60px;
   padding-right: 60px;
+  z-index: 9999999;
   select {
     color: #cccccc;
     font-weight: bold;
